[tool.poetry]
name = "fit"
version = "1.1.0-rc"
description = "FIT is a Python3 application for forensic acquisition of contents like web pages, emails, social media, etc. directly from the internet."
authors = ["Fit Project <info@fit-project.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ntplib = "^0.4.0"
numpy = "^1.24.1"
SQLAlchemy = "^2.0.0"
opencv-python = "^4.5.1.48"
pillow = "^9.4.0"
python-whois = "^0.8.0"
xhtml2pdf = "^0.2.9"
PyPDF2 = "^3.0.1"
sslkeylog = "^0.4.0"
nslookup = "^1.7.0"
scapy = "^2.5.0"
instaloader = "^4.9.6"
pyzmail36 = "^1.0.5"
rfc3161ng = "^2.1.3"
brotlipy = "^0.7.0"
bs4 = "^0.0.1"
PyQt6 = "^6.5.0"
PyQt6-WebEngine = "^6.5.0"
screeninfo = "^0.8.1"
yt-dlp = "^2023.3.4"
youtube-comment-downloader = "^0.1.68"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
