[tool.poetry]
name = "fit"
version = "2.0.0-BETA"
description = "FIT is a Python3 application for forensic acquisition of contents like web pages, emails, social media, etc. directly from the internet."
authors = ["Fit Project <info@fit-project.org>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
ntplib = "^0.4.0"
numpy = "^1.24.1"
SQLAlchemy = "^2.0.0"
pillow = "^9.4.0"
python-whois = "^0.8.0"
xhtml2pdf = "^0.2.9"
PyPDF2 = "^3.0.1"
nslookup = "^1.7.0"
scapy = "^2.5.0"
instaloader = "^4.9.6"
pyzmail36 = "^1.0.5"
rfc3161ng = "^2.1.3"
brotlipy = "^0.7.0"
bs4 = "^0.0.1"
PyQt6 = "6.6.0"
PyQt6-WebEngine = "6.6.0"
yt-dlp = "2024.7.9"
youtube-comment-downloader = "^0.1.68"
mitmproxy = "^10.1.5"
lxml = "^4.9.3"
windows-tools-users = {version = "^1.3.0", markers = "sys_platform == 'win32'"}
pyqt6-webengine-qt6 = "6.6.0"
pyqt6-qt6 = "6.6.0"
ffmpeg-downloader = "^0.3.0"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
