[tool.poetry]
name = "fit"
version = "3.0.0"
description = "FIT is a modular suite of Python applications for digital forensic acquisition of online contents such as web pages, emails, and social media."
authors = ["FIT Project <info@fit-project.org>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Modular components (external repositories)
fit-wizard = { git = "https://github.com/fit-project/fit-wizard.git", rev = "main" }
fit-web = { git = "https://github.com/fit-project/fit-web.git", rev = "main" }
fit-mail = { git = "https://github.com/fit-project/fit-mail.git", rev = "main" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"